--- a/ap.html
+++ b/ap.html
@@ -215,7 +215,7 @@
   <dl>
  <dt> Demand </dt>
  <dd>
-  Tumutukoy sa dami ng produktong 0maari mong bilhin sa isang takdang presyobat partikular na panahon.
+  Tumutukoy sa dami ng produktong maari mong bilhin sa isang takdang presyo at partikular na panahon.
 </dd>
 <p><b> Kaugnayan ng Presyo sa Demand</b></p>
 <p> Ang presyo amg pinakamahalagang nagtatakda (determinant) sa demand ng tao.
