--- a/ap.html
+++ b/ap.html
@@ -433,7 +433,7 @@ Ang punto (E) ay tinaguriang punto ng ekwilibriyo kung saan ang kurba ng demand 
           <td>100</td>
           <td>9</td>
           <td>18</td>
-          <td class="small">Kalabsan</td>
+          <td class="small">Kalabisan</td>
           <td class="small">Pababa</td>
         </tr>
         <tr>
@@ -441,7 +441,7 @@ Ang punto (E) ay tinaguriang punto ng ekwilibriyo kung saan ang kurba ng demand 
           <td>90</td>
           <td>10</td>
           <td>16</td>
-          <td class="small">Kalabiso</td>
+          <td class="small">Kalabisan</td>
           <td class="small">Pababa</td>
         </tr>
         <tr>
